2004-06-30 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: Added additional export definitions.
	* cli/cmd_clear.cc: type casting fixes.
	* src/breakpoints.h: added get_bp accessor function for the 
	global bp (breakpoint) object
	* src/gpsim_time.h: now uses the bp accessor function.
	* src/processor.cc: If the listing file is not present,
	gpsim will not crash now...
	
2004-06-30 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/input.cc:
	Starting gpsim in cli only mode would cause a crash.
	
2004-06-30 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: small fix for MSVC compilation

2004-06-28 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/misc.h, cli/cmd_symbol.cc, src/symbol.cc:
	Removed 'NUMBER' and 'FLOATING_NUMBER' types from the CLI parser. Now
	all numbers are represented by expressions. All commands that used to
	numbers have been converted over to use expressions.
	
2004-06-28 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_module.cc, src/modules.h, src/modules.cc, gui/gui_breadboard.cc:
	Module positioning now works again.

2004-06-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc: From Ralph, the breadboard was not
	using module pixmaps.
	* cli/cmd_module.cc, cli/cmd_module.h, cli/command.cc,
	cli/parse.yy: cli module command now supports expressions.

2004-06-27 Borut Razem <borut.razem@siol.net>
	* gpsim.sln: set project dependency - modules depends on gpsim
	* gpsim/gpsim.vcproj: corrected Ignore Specific Library settings
	* doc/gpsimWin32.html: added to CVS

2004-06-24 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, cli/cmd_break.h, cli/cmd_log.cc,
	cli/cmd_log.h, cli/cmd_stimulus.h, cli/command.cc, 
	cli/command.h, cli/expr.cc, cli/expr.h, cli/parse.yy,cli/scan.ll:
	The 'break' and 'log' commands now accept expressions
	
2004-06-24 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, plat/win32/fd2raw.h: functions to set the WIN32
	  console to raw mode.